--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -259,9 +259,11 @@
                 }
             }
             .main-right-section{
+                width: 70% !important;
                 padding: 3% !important;
             }
             .aside-left-container {
+                width: 30% !important;
                 .container-detail-personal-data {
                     .container-detail {
                         width: 85%;
