--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -88,9 +88,6 @@ body {
     width: 70%;
     padding: 0 3% 3% 3%;
     position: relative; }
-    .app-container main .main-right-section > i {
-      position: absolute;
-      right: 5%; }
     .app-container main .main-right-section h1.name {
       text-align: left; }
     .app-container main .main-right-section section {
@@ -98,10 +95,16 @@ body {
       background-color: #ffffff;
       margin: 6% 0;
       padding: 6% 0 6% 6%;
-      box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23); }
+      box-shadow: 0 1px 11px rgba(0, 0, 0, 0.19), 0 2px 8px rgba(0, 0, 0, 0.23);
+      position: relative; }
       .app-container main .main-right-section section [class^="icon-"] {
         display: inline-block;
         font-size: 2em; }
+      .app-container main .main-right-section section i.add-item {
+        position: absolute;
+        right: 2%;
+        font-size: 1em;
+        top: 1%; }
       .app-container main .main-right-section section h2,
       .app-container main .main-right-section section h3,
       .app-container main .main-right-section section h4,
