--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -100,11 +100,19 @@ body {
       .app-container main .main-right-section section [class^="icon-"] {
         display: inline-block;
         font-size: 2em; }
-      .app-container main .main-right-section section i.add-item {
+      .app-container main .main-right-section section:hover i.actions-item.add-icon {
+        visibility: initial;
+        opacity: 1; }
+      .app-container main .main-right-section section i.actions-item {
+        transition: all 0.5s ease;
+        visibility: hidden;
+        opacity: 0;
         position: absolute;
         right: 2%;
         font-size: 1em;
         top: 1%; }
+        .app-container main .main-right-section section i.actions-item:hover {
+          cursor: pointer; }
       .app-container main .main-right-section section h2,
       .app-container main .main-right-section section h3,
       .app-container main .main-right-section section h4,
@@ -130,11 +138,15 @@ body {
         font-size: 0.8em; }
       .app-container main .main-right-section section article {
         padding: 15px 0;
-        border-bottom: 1px solid #e3e3e3; }
+        border-bottom: 1px solid #e3e3e3;
+        position: relative; }
         .app-container main .main-right-section section article:last-of-type {
           border-bottom: none; }
         .app-container main .main-right-section section article div {
           padding-right: 5%; }
+        .app-container main .main-right-section section article:hover i.actions-item.remove-icon {
+          visibility: initial;
+          opacity: 1; }
       .app-container main .main-right-section section:first-of-type {
         margin-top: 0; }
       .app-container main .main-right-section section:last-of-type {
