--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -4,7 +4,7 @@
         box-sizing: border-box;
         text-decoration: none;
     }
-
+    
     $time-transition: 0.3s; // section {
     //     background: $secondary-color-dark;
     //     min-height: 100vh;
@@ -19,7 +19,7 @@
         //     text-align: justify;
         // }
     }
-
+    
     .app-container {
         position: relative;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -129,11 +129,23 @@
                         display: inline-block;
                         font-size: 2em;
                     }
-                    i.add-item {
+                    &:hover {
+                        i.actions-item.add-icon {
+                            visibility: initial;
+                            opacity: 1;
+                        }
+                    }
+                    i.actions-item {
+                        transition: all 0.5s ease;
+                        visibility: hidden;
+                        opacity: 0;
                         position: absolute;
                         right: 2%;
                         font-size: 1em;
                         top: 1%;
+                        &:hover {
+                            cursor: pointer;
+                        }
                     }
                     h2,
                     h3,
@@ -168,11 +180,18 @@
                     article {
                         padding: 15px 0;
                         border-bottom: 1px solid $secondary-color-light;
+                        position: relative;
                         &:last-of-type {
                             border-bottom: none;
                         }
                         div {
                             padding-right: 5%;
+                        }
+                        &:hover {
+                            i.actions-item.remove-icon {
+                                visibility: initial;
+                                opacity: 1;
+                            }
                         }
                     }
                     &:first-of-type {
@@ -204,7 +223,7 @@
             }
         }
     }
-
+    
     header {
         margin: 1% 0;
         text-align: right;
@@ -245,7 +264,7 @@
             }
         }
     }
-
+    
     @media print {
         .app-container {
             width: 21cm;
