Se eliminan los id de los documentos

--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -206,7 +206,7 @@ header {
       width: 30% !important; }
       .app-container .aside-left-container .container-detail-personal-data .container-detail {
         width: 85%; }
-  header {
+  header, .actions-item {
     display: none; }
   @page {
     margin: 0; } }
