--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -290,7 +290,7 @@
                 }
             }
         }
-        header {
+        header, .actions-item {
             display: none;
         }
         @page {
