--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -170,12 +170,10 @@ body {
 header {
   margin: 1% 0;
   text-align: right; }
-  header .icon-them,
-  header .icon-print {
+  header [class^="icon-"] {
     font-size: 1.2em;
     padding: 1%; }
-    header .icon-them:hover,
-    header .icon-print:hover {
+    header [class^="icon-"]:hover {
       cursor: pointer; }
 
 @media (max-width: 21cm) {
@@ -206,7 +204,8 @@ header {
       width: 30% !important; }
       .app-container .aside-left-container .container-detail-personal-data .container-detail {
         width: 85%; }
-  header, .actions-item {
+  header,
+  .actions-item {
     display: none; }
   @page {
     margin: 0; } }
