--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -4,7 +4,7 @@
         box-sizing: border-box;
         text-decoration: none;
     }
-    
+
     $time-transition: 0.3s; // section {
     //     background: $secondary-color-dark;
     //     min-height: 100vh;
@@ -19,7 +19,7 @@
         //     text-align: justify;
         // }
     }
-    
+
     .app-container {
         position: relative;
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
@@ -87,7 +87,7 @@
                 .container-detail-personal-data {
                     color: $primary-color-text;
                     padding-bottom: 8%;
-                    p {
+                    .text {
                         font-size: 0.7em;
                     }
                     &>div {
@@ -222,8 +222,21 @@
                 display: inline-block;
             }
         }
+        .message-content {
+            position: fixed;
+            z-index: 1000;
+            color: white;
+            background: green;
+            width: 21cm;
+            min-height: initial;
+            bottom: 0;
+            >* {
+                display: block;
+                line-height: 2.2em;
+            }
+        }
     }
-    
+
     header {
         margin: 1% 0;
         text-align: right;
@@ -245,7 +258,9 @@
     // }
     @media (max-width: 21cm) {
         .app-container {
-            width: 100%;
+            width: 100%; // .message-content{
+            //     width: 100%;
+            // }
             main.table {
                 width: 100%;
                 >* {
@@ -263,7 +278,7 @@
             }
         }
     }
-    
+
     @media print {
         .app-container {
             width: 21cm;
