Ordenamiento de los estudios

--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -88,6 +88,7 @@
                     color: $primary-color-text;
                     padding-bottom: 8%;
                     .text {
+                        display: block;
                         font-size: 0.7em;
                     }
                     &>div {
