--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -69,6 +69,7 @@ body {
       color: #ffffff;
       padding-bottom: 8%; }
       .app-container main .aside-left-container .container-detail-personal-data .text {
+        display: block;
         font-size: 0.7em; }
       .app-container main .aside-left-container .container-detail-personal-data > div {
         width: 85%;
