--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -69,17 +69,16 @@ body {
       color: #ffffff; }
       .app-container main .aside-left-container .container-detail-personal-data .text {
         display: block;
-        font-size: 0.7em; }
+        font-size: 0.7em;
+        line-height: 1.6em; }
       .app-container main .aside-left-container .container-detail-personal-data > div {
         width: 85%;
         border-bottom: 1px solid #398aca;
         padding: 8% 8% 8% 0; }
-      .app-container main .aside-left-container .container-detail-personal-data:first-of-type {
-        padding-top: 8%; }
     .app-container main .aside-left-container [class^="icon-"] {
-      display: inline-block;
+      display: table-cell;
       font-size: 1.3em;
-      padding: 50% 20px 0 0; }
+      padding: 8% 20px 0 0; }
   .app-container main .main-right-section {
     transition: all 0.3s ease;
     background: #e3e3e3;
@@ -204,8 +203,11 @@ header {
       .app-container main.table > * {
         display: block;
         width: 100%; }
-    .app-container .aside-left-container .container-detail-personal-data .container-detail {
-      width: 90%; }
+    .app-container main .aside-left-container .container-detail-personal-data .container-detail {
+      width: 90%;
+      padding: 5% 8% 5% 0; }
+    .app-container main .aside-left-container [class^="icon-"] {
+      padding: 5% 2% 0 0; }
     .app-container .message-content {
       width: 100%; } }
 
@@ -225,7 +227,10 @@ header {
     .app-container .aside-left-container {
       width: 30% !important; }
       .app-container .aside-left-container .container-detail-personal-data .container-detail {
-        width: 85%; }
+        width: 85% !important;
+        padding: 8% 8% 8% 0 !important; }
+      .app-container .aside-left-container [class^="icon-"] {
+        padding: 8% 20px 0 0 !important; }
   header,
   .actions-item {
     display: none; }
