--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -307,9 +307,10 @@
                     visibility: none;
                     opacity: 0;
                     [class^="icon-"] {
-                        padding: 6% 0% 0 0;
+                        padding: 6% 0 0 0;
+                        transition: all 0.5s ease;
                     }
-                    transition: all 3s ease;
+                    transition: all 0.5s ease;
                     &.active {
                         visibility: initial;
                         opacity: 1;
