--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -33,6 +33,15 @@
         // &>* {
         //     min-height: 100vh; // display: inline-block;
         // }
+        .loading {
+            background: rgba(9, 11, 14, 0.47);
+            min-height: 100vh;
+            position: fixed;
+            z-index: 100000000000000;
+            max-width: 21cm;
+            width: 100%;
+            color: red;
+        }
         main {
             &.dark-them {
                 .aside-left-container {
@@ -363,5 +372,249 @@
         }
         @page {
             margin: 0;
+        }
+    }
+    
+    @keyframes atom {
+        from {
+            transform: none;
+        }
+        to {
+            transform: translateY(-10px);
+        }
+    }
+    
+    @keyframes electron-circle1 {
+        from {
+            transform: rotateY(70deg) rotateZ(20deg);
+        }
+        to {
+            transform: rotateY(70deg) rotateZ(380deg);
+        }
+    }
+    
+    @keyframes electron1 {
+        from {
+            transform: rotateZ(-20deg) rotateY(-70deg);
+        }
+        to {
+            transform: rotateZ(-380deg) rotateY(-70deg);
+        }
+    }
+    
+    @keyframes electron-circle2 {
+        from {
+            transform: rotateY(60deg) rotateX(60deg) rotateZ(-30deg);
+        }
+        to {
+            transform: rotateY(60deg) rotateX(60deg) rotateZ(330deg);
+        }
+    }
+    
+    @keyframes electron2 {
+        from {
+            transform: rotateZ(30deg) rotateX(-60deg) rotateY(-60deg);
+        }
+        to {
+            transform: rotateZ(-330deg) rotateX(-60deg) rotateY(-60deg);
+        }
+    }
+    
+    @keyframes electron-circle3 {
+        from {
+            transform: rotateY(-60deg) rotateX(60deg) rotateZ(100deg);
+        }
+        to {
+            transform: rotateY(-60deg) rotateX(60deg) rotateZ(460deg);
+        }
+    }
+    
+    @keyframes electron3 {
+        from {
+            transform: rotateZ(-100deg) rotateX(-60deg) rotateY(60deg);
+        }
+        to {
+            transform: rotateZ(-460deg) rotateX(-60deg) rotateY(60deg);
+        }
+    }
+    
+    .atom {
+        margin: 50px auto;
+        width: 120px;
+        height: 120px;
+        position: relative;
+        animation: atom 1s ease-in-out infinite alternate;
+        perspective: 300px;
+        transform-style: preserve-3d;
+    }
+    
+    .atom:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        width: 20px;
+        height: 20px;
+        border-radius: 10px;
+        background: #555;
+    }
+    
+    .atom .electron {
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: auto;
+        width: 100px;
+        height: 100px;
+        border-radius: 50px;
+        border: 2px solid #666;
+        transform-style: preserve-3d;
+    }
+    
+    .atom .electron:before {
+        content: '';
+        position: absolute;
+        top: -4px;
+        left: 0;
+        right: 0;
+        margin: auto;
+        width: 8px;
+        height: 8px;
+        border-radius: 4px;
+        background: #666;
+        transform-origin: 50% 50% 0;
+    }
+    
+    .atom .electron:nth-child(1) {
+        transform: rotateY(70deg) rotateZ(20deg);
+        animation: electron-circle1 3s linear infinite;
+    }
+    
+    .atom .electron:nth-child(2) {
+        transform: rotateY(60deg) rotateX(60deg) rotateZ(-30deg);
+        animation: electron-circle2 3s linear infinite;
+    }
+    
+    .atom .electron:nth-child(3) {
+        transform: rotateY(-60deg) rotateX(60deg) rotateZ(100deg);
+        animation: electron-circle3 3s linear infinite;
+    }
+    
+    .atom .electron:nth-child(1):before {
+        transform: rotateZ(-20deg) rotateY(-70deg);
+        animation: electron1 3s linear infinite;
+    }
+    
+    .atom .electron:nth-child(2):before {
+        transform: rotateZ(30deg) rotateX(-60deg) rotateY(-60deg);
+        animation: electron2 3s linear infinite;
+    }
+    
+    .atom .electron:nth-child(3):before {
+        transform: rotateZ(-100deg) rotateX(-60deg) rotateY(60deg);
+        animation: electron3 3s linear infinite;
+    }
+    
+    .loader {
+        position: fixed;
+    }
+    
+    .loader-inner {
+        width: 100px;
+        height: 100px;
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        margin-left: -50px;
+        margin-top: -50px;
+        z-index: 9999;
+        .spinner {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0%;
+            border: solid 1px #8BD0EF;
+            border-radius: 50%;
+        }
+        .blue,
+        .white {
+            width: 80%;
+            height: 80%;
+            border-radius: 50%;
+            display: block;
+            position: absolute;
+            top: 10%;
+            left: 10%;
+        }
+        .blue {
+            background: #8bd0ef;
+            animation: blueloader 1.4s infinite linear;
+        }
+        .white {
+            background: #fff;
+            animation: whiteloader 1.4s infinite linear;
+        }
+        .static {
+            z-index: 100;
+            transform: scale(1);
+        }
+        .active {
+            z-index: 200;
+            transform: scale(0.1);
+        }
+    }
+    
+    // KEYFRAMES -------------------------------------------------------------
+    @keyframes spin {
+        0% {
+            transform: rotate(0deg);
+        }
+        100% {
+            transform: rotate(359deg);
+        }
+    }
+    
+    @keyframes blueloader {
+        0% {
+            z-index: 100;
+            transform: scale(1);
+        }
+        50% {
+            z-index: 100;
+            transform: scale(1);
+        }
+        51% {
+            z-index: 200;
+            transform: scale(0);
+        }
+        100% {
+            z-index: 200;
+            transform: scale(1);
+        }
+    }
+    
+    @keyframes whiteloader {
+        0% {
+            z-index: 200;
+            transform: scale(0);
+        }
+        50% {
+            z-index: 200;
+            transform: scale(1);
+        }
+        51% {
+            z-index: 100;
+            transform: scale(1);
+        }
+        100% {
+            z-index: 100;
+            transform: scale(1);
         }
     }
