--- a/src/Styles/Main/index.css
+++ b/src/Styles/Main/index.css
@@ -27,27 +27,23 @@ body {
   max-width: 21cm; }
   .app-container h1 {
     font-size: 1.5em; }
-  .app-container .loading {
-    background: rgba(9, 11, 14, 0.47);
-    min-height: 100vh;
-    position: fixed;
-    z-index: 100000000000000;
-    max-width: 21cm;
-    width: 100%;
-    color: red; }
-  .app-container main.dark-them .aside-left-container {
+  .app-container.dark-them .aside-left-container {
     background: #191919; }
-  .app-container main.dark-them .main-right-section {
+  .app-container.dark-them .main-right-section {
     color: #ffffff;
     background: #424242; }
-    .app-container main.dark-them .main-right-section > i {
+    .app-container.dark-them .main-right-section > i {
       position: absolute;
       right: 5%; }
-    .app-container main.dark-them .main-right-section section {
+    .app-container.dark-them .main-right-section section {
       background-color: #191919; }
-      .app-container main.dark-them .main-right-section section a,
-      .app-container main.dark-them .main-right-section section h3 {
+      .app-container.dark-them .main-right-section section a,
+      .app-container.dark-them .main-right-section section h3 {
         color: #ffffff; }
+  .app-container.dark-them .container-footer {
+    background: #151515; }
+  .app-container.dark-them header [class^="icon-"] {
+    color: #ffffff; }
   .app-container main.table {
     table-layout: fixed; }
   .app-container main .aside-left-container {
@@ -199,6 +195,7 @@ body {
     z-index: 10000;
     right: 14px; }
     .app-container header [class^="icon-"] {
+      transition: all 0.3s ease;
       font-size: 1.3em;
       padding: 15px;
       color: #737373; }
@@ -267,193 +264,50 @@ body {
   @page {
     margin: 0; } }
 
-@keyframes atom {
-  from {
-    transform: none; }
-  to {
-    transform: translateY(-10px); } }
-
-@keyframes electron-circle1 {
-  from {
-    transform: rotateY(70deg) rotateZ(20deg); }
-  to {
-    transform: rotateY(70deg) rotateZ(380deg); } }
-
-@keyframes electron1 {
-  from {
-    transform: rotateZ(-20deg) rotateY(-70deg); }
-  to {
-    transform: rotateZ(-380deg) rotateY(-70deg); } }
-
-@keyframes electron-circle2 {
-  from {
-    transform: rotateY(60deg) rotateX(60deg) rotateZ(-30deg); }
-  to {
-    transform: rotateY(60deg) rotateX(60deg) rotateZ(330deg); } }
-
-@keyframes electron2 {
-  from {
-    transform: rotateZ(30deg) rotateX(-60deg) rotateY(-60deg); }
-  to {
-    transform: rotateZ(-330deg) rotateX(-60deg) rotateY(-60deg); } }
-
-@keyframes electron-circle3 {
-  from {
-    transform: rotateY(-60deg) rotateX(60deg) rotateZ(100deg); }
-  to {
-    transform: rotateY(-60deg) rotateX(60deg) rotateZ(460deg); } }
-
-@keyframes electron3 {
-  from {
-    transform: rotateZ(-100deg) rotateX(-60deg) rotateY(60deg); }
-  to {
-    transform: rotateZ(-460deg) rotateX(-60deg) rotateY(60deg); } }
-
-.atom {
-  margin: 50px auto;
-  width: 120px;
-  height: 120px;
-  position: relative;
-  animation: atom 1s ease-in-out infinite alternate;
-  perspective: 300px;
-  transform-style: preserve-3d; }
-
-.atom:before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  width: 20px;
-  height: 20px;
-  border-radius: 10px;
-  background: #555; }
-
-.atom .electron {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  margin: auto;
-  width: 100px;
-  height: 100px;
-  border-radius: 50px;
-  border: 2px solid #666;
-  transform-style: preserve-3d; }
-
-.atom .electron:before {
-  content: '';
-  position: absolute;
-  top: -4px;
-  left: 0;
-  right: 0;
-  margin: auto;
-  width: 8px;
-  height: 8px;
-  border-radius: 4px;
-  background: #666;
-  transform-origin: 50% 50% 0; }
-
-.atom .electron:nth-child(1) {
-  transform: rotateY(70deg) rotateZ(20deg);
-  animation: electron-circle1 3s linear infinite; }
-
-.atom .electron:nth-child(2) {
-  transform: rotateY(60deg) rotateX(60deg) rotateZ(-30deg);
-  animation: electron-circle2 3s linear infinite; }
-
-.atom .electron:nth-child(3) {
-  transform: rotateY(-60deg) rotateX(60deg) rotateZ(100deg);
-  animation: electron-circle3 3s linear infinite; }
-
-.atom .electron:nth-child(1):before {
-  transform: rotateZ(-20deg) rotateY(-70deg);
-  animation: electron1 3s linear infinite; }
-
-.atom .electron:nth-child(2):before {
-  transform: rotateZ(30deg) rotateX(-60deg) rotateY(-60deg);
-  animation: electron2 3s linear infinite; }
-
-.atom .electron:nth-child(3):before {
-  transform: rotateZ(-100deg) rotateX(-60deg) rotateY(60deg);
-  animation: electron3 3s linear infinite; }
-
-.loader {
-  position: fixed; }
-
-.loader-inner {
-  width: 100px;
-  height: 100px;
-  display: block;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -50px;
-  margin-top: -50px;
-  z-index: 9999; }
-  .loader-inner .spinner {
-    width: 100%;
-    height: 100%;
+.loading {
+  background: rgba(9, 11, 14, 0.47);
+  min-height: 100vh;
+  position: fixed;
+  z-index: 100000000000000;
+  max-width: 21cm;
+  width: 100%; }
+  .loading .spinner {
     position: absolute;
-    top: 0;
-    left: 0%;
-    border: solid 1px #8BD0EF;
-    border-radius: 50%; }
-  .loader-inner .blue,
-  .loader-inner .white {
-    width: 80%;
-    height: 80%;
-    border-radius: 50%;
-    display: block;
-    position: absolute;
-    top: 10%;
-    left: 10%; }
-  .loader-inner .blue {
-    background: #8bd0ef;
-    animation: blueloader 1.4s infinite linear; }
-  .loader-inner .white {
-    background: #fff;
-    animation: whiteloader 1.4s infinite linear; }
-  .loader-inner .static {
-    z-index: 100;
-    transform: scale(1); }
-  .loader-inner .active {
-    z-index: 200;
-    transform: scale(0.1); }
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    top: 50%;
+    width: 70px;
+    text-align: center; }
+    .loading .spinner > * {
+      width: 18px;
+      height: 18px;
+      background-color: #01579b;
+      border-radius: 100%;
+      display: inline-block;
+      -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+      animation: sk-bouncedelay 1.4s infinite ease-in-out both; }
+    .loading .spinner .bounce1 {
+      -webkit-animation-delay: -0.32s;
+      animation-delay: -0.32s; }
+    .loading .spinner .bounce2 {
+      -webkit-animation-delay: -0.16s;
+      animation-delay: -0.16s; }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg); }
+@-webkit-keyframes sk-bouncedelay {
+  0%,
+  80%,
   100% {
-    transform: rotate(359deg); } }
+    -webkit-transform: scale(0); }
+  40% {
+    -webkit-transform: scale(1); } }
 
-@keyframes blueloader {
-  0% {
-    z-index: 100;
-    transform: scale(1); }
-  50% {
-    z-index: 100;
-    transform: scale(1); }
-  51% {
-    z-index: 200;
+@keyframes sk-bouncedelay {
+  0%,
+  80%,
+  100% {
+    -webkit-transform: scale(0);
     transform: scale(0); }
-  100% {
-    z-index: 200;
-    transform: scale(1); } }
-
-@keyframes whiteloader {
-  0% {
-    z-index: 200;
-    transform: scale(0); }
-  50% {
-    z-index: 200;
-    transform: scale(1); }
-  51% {
-    z-index: 100;
-    transform: scale(1); }
-  100% {
-    z-index: 100;
+  40% {
+    -webkit-transform: scale(1);
     transform: scale(1); } }
