--- a/src/Styles/base.scss
+++ b/src/Styles/base.scss
@@ -3,6 +3,7 @@ $primary-color-light: #3aa7de;
 $color-aca: #398aca;
 $color-1e0: #6eb1e0;
 $color-f6e: #002f6e;
+$color-515: #151515;;
 $primary-color-dark: #002f6c;
 $primary-color-text: #ffffff;
 $secondary-color: #263238;
