--- a/src/Styles/cv.scss
+++ b/src/Styles/cv.scss
@@ -25,7 +25,7 @@
         box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
         min-height: 100vh;
         margin: 0 auto;
-        padding: 3px;
+        // padding: 3px;
         max-width: 21cm; // height: 100vh;
         h1 {
             font-size: 1.5em; // padding: 10px;
